Fixed navbar brand and collapse line breaking issue. Navbar now fully collapses into .9 transparent background at XS width. Logo now responsive; no longer using fixed-width

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -23,7 +23,7 @@ html, body {
 /* ==========================================================================
    Navigation
    ========================================================================== */
-.navbar-inverse { border-radius: 0; background:rgba(0, 0, 0, .7); border-bottom:1px solid rgba(255, 255, 255, 0.15); min-height:100px; padding-top:25px; margin-bottom:0;}
+.navbar-inverse { border-radius: 0; background:rgba(0, 0, 0, .7); border-bottom:1px solid rgba(255, 255, 255, 0.15); min-height:115px; padding-top:25px; margin-bottom:0;}
 .navbar-inverse *:focus { outline: 0; }
 
 
@@ -42,7 +42,7 @@ html, body {
 .navbar-inverse .navbar-nav > .active > a { background:none; color:white; }
 
 .navbar-inverse .navbar-brand {font-size: 24px; color:white; padding:0 0 0 15px; margin:12px 0 0 0; }
-  .navbar-inverse .navbar-brand img { margin-top:-8px;}
+.navbar-inverse .navbar-brand img { margin-top:-8px;}
 
 .navbar-nav .dropdown-menu {left:-5px; font-size: 13px; background-color: rgba(0, 0, 0, .7); border: 0px none; -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px; -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
@@ -90,7 +90,7 @@ html, body {
 }
 
 .headroom { position: fixed;top: 0;left: 0;right: 0;transition: all .4s ease-in-out;}
-.headroom--unpinned {top: -100px;}
+.headroom--unpinned {top: -120px;}
 .headroom--pinned {top: 0;}
 
 
@@ -217,12 +217,15 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    Media Queries
    ========================================================================== */
 
+@media (max-width: @screen-xs-max) {
+  .navbar-inverse { background:rgba(0,0,0,.9); }
+}
+
 @media (min-width: @screen-sm-min) {
 .branding {position: absolute; text-align: left; right: 0; left: 0; bottom: 2em; padding: 1em 5% 1em 1em; max-width: 30em; width: auto; transition: padding-right 0.3s ease, background-color 0.3s ease;}
 }
 
-@media (max-width: @screen-sm-max) {
-.navbar-inverse { background:rgba(0,0,0,.9); } 
+@media (max-width: @screen-sm-max) { 
 .navbar-collapse ul { text-align: center;  width:100%; padding-bottom:10px; }
 .navbar-collapse ul .btn{ max-width:50%; margin:0 auto; } 
 }
